# learn-opengl

./: CMakeLists.txt  README.md
assets/shaders/: fragmentShader.glsl  vertexShader.glsl
code/: Shader.cpp  Shader.hpp  main.cpp
